Name:          digestive-functors-blaze
Version:       0.6.0.1
Synopsis:      Blaze frontend for the digestive-functors library
Description:   Blaze frontend for the digestive-functors library
Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.6

Library
  Hs-source-dirs:  src
  GHC-options:     -Wall -fwarn-tabs
  Exposed-modules: Text.Digestive.Blaze.Html5

  Build-depends:
    base               >= 4    && < 5,
    blaze-html         >= 0.5  && < 0.7,
    blaze-markup       >= 0.5  && < 0.6,
    digestive-functors >= 0.6  && < 0.7,
    text               >= 0.11 && < 0.12
