Name:          digestive-functors-happstack
Version:       0.1.1.3
Synopsis:      Happstack backend for the digestive-functors library
Description:   This is a happstack backend for the digestive-functors
    library.

Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt
Maintainer:    jaspervdj@gmail.com
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.6


Library
  Hs-source-dirs:  src
  Exposed-modules: Text.Digestive.Forms.Happstack

  Build-depends:
    base               >= 4    && < 5,
    bytestring         >= 0.9  && < 0.10,
    digestive-functors >= 0.1  && < 0.3,
    happstack-server   >= 6.0  && < 6.6,
    text               >= 0.11 && < 1.0,
    utf8-string        >= 0.3  && < 0.4
