Name:          digestive-functors-happstack
Version:       0.3.0.1
Synopsis:      Happstack backend for the digestive-functors library
Description:   Happstack backend for the digestive-functors library
Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.6


Library
  Hs-source-dirs:  src
  GHC-options:     -Wall -fwarn-tabs
  Exposed-modules: Text.Digestive.Happstack

  Build-depends:
    base               >= 4    && < 5,
    bytestring         >= 0.9  && < 0.10,
    digestive-functors >= 0.3  && < 0.4,
    happstack-server   >= 6.0  && < 7.1,
    text               >= 0.11 && < 1.0
