Name:          digestive-functors-happstack
Version:       0.6.1.3
Synopsis:      Happstack backend for the digestive-functors library
Description:   Happstack backend for the digestive-functors library
Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.10

Library
  Hs-source-dirs:   src
  GHC-options:      -Wall -fwarn-tabs
  Exposed-modules:  Text.Digestive.Happstack
  Default-language: Haskell2010

  Build-depends:
    base                  >= 4    && < 5,
    bytestring            >= 0.9  && < 0.11,
    digestive-functors    >= 0.8  && < 0.9,
    happstack-server      >= 6.0  && < 7.7,
    text                  >= 0.11 && < 1.3
