Name:          digestive-functors-heist
Version:       0.5.1.0
Synopsis:      Heist frontend for the digestive-functors library
Description:   Heist frontend for the digestive-functors library
Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.6

Library
  Hs-source-dirs:  src
  GHC-options:     -Wall -fwarn-tabs
  Exposed-modules: Text.Digestive.Heist

  Build-depends:
    base               >= 4    && < 5,
    digestive-functors >= 0.5  && < 0.6,
    heist              >= 0.10 && < 0.11,
    text               >= 0.11 && < 0.12,
    xmlhtml            >= 0.1  && < 0.3
