Name:          digestive-functors-heist
Version:       0.8.8.1
Synopsis:      Heist frontend for the digestive-functors library
Description:   Heist frontend for the digestive-functors library
Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.6

Extra-source-files:
  CHANGELOG

Library
  Hs-source-dirs:  src
  GHC-options:     -Wall -fwarn-tabs
  Exposed-modules:
    Text.Digestive.Heist
    Text.Digestive.Heist.Compiled

  Build-depends:
    base                  >= 4     && < 5,
    blaze-builder         >= 0.3   && < 0.5,
    digestive-functors    >= 0.8.3 && < 0.9,
    heist                 >= 0.13  && < 1.2,
    map-syntax            >= 0.2   && < 0.4,
    mtl                   >= 2     && < 2.3,
    text                  >= 0.11  && < 1.3,
    xmlhtml               >= 0.1   && < 0.3
