Name:          digestive-functors-lucid
Version:       0.0.0.3
Synopsis:      Lucid frontend for the digestive-functors library
Description:   Ludic frontend for the digestive-functors library
Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Athan Clark <athan.clark@gmail.com>
Maintainer:    Athan Clark <athan.clark@gmail.com>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.6

Library
  Hs-source-dirs:  src
  GHC-options:     -Wall -fwarn-tabs
  Exposed-modules: Text.Digestive.Lucid.Html5

  Build-depends:
    base               >= 4    && < 5,
    lucid              >= 2.9,
    digestive-functors >= 0.6  && < 0.9,
    text               >= 0.11 && < 1.3
