Name:                digestive-functors-snap
Version:             0.1.3.0
Synopsis:            Snap backend for the digestive-functors library
Description:         This is a snap backend for the digestive-functors library.

Homepage:            http://github.com/jaspervdj/digestive-functors
License:             BSD3
License-file:        LICENSE
Author:              Jasper Van der Jeugt
Maintainer:          jaspervdj@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6


Library
  Hs-source-dirs:    src
  Exposed-modules:   Text.Digestive.Forms.Snap
  Build-depends:
    base               >= 4     && < 5,
    bytestring         >= 0.9   && < 0.10,
    digestive-functors >= 0.2.1 && < 0.3,
    snap-core          >= 0.5   && < 0.8,
    utf8-string        >= 0.3   && < 0.4
