Name:          digestive-functors-snap
Version:       0.3.0.0
Synopsis:      Snap backend for the digestive-functors library
Description:   Snap backend for the digestive-functors library
Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.6

Library
  Hs-source-dirs:  src
  GHC-options:     -Wall -fwarn-tabs
  Exposed-modules: Text.Digestive.Snap

  Build-depends:
    base               >= 4    && < 5,
    containers         >= 0.3  && < 0.5,
    digestive-functors >= 0.3  && < 0.4,
    snap-core          >= 0.7  && < 0.9,
    text               >= 0.11 && < 0.12
