Name:          digestive-functors-snap
Version:       0.7.0.0
Synopsis:      Snap backend for the digestive-functors library
Description:   Snap backend for the digestive-functors library
Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.6

Library
  Hs-source-dirs:  src
  GHC-options:     -Wall -fwarn-tabs
  Exposed-modules: Text.Digestive.Snap

  Build-depends:
    base               >= 4    && < 5,
    containers         >= 0.3  && < 0.6,
    digestive-functors >= 0.8  && < 0.9,
    snap-core          >= 1.0  && < 1.1,
    text               >= 0.11 && < 1.3,
    directory          >= 1.0  && < 1.4,
    filepath           >= 1.0  && < 1.5,
    mtl                >= 2    && < 3,
    bytestring         >= 0.9  && < 0.11
