Name:                digestive-functors
Version:             0.1.0.2
Synopsis:            A general way to consume input using applicative functors
Description:         Digestive functors is a library to generate and process
    HTML forms.  You can find an introduction here:

    <http://github.com/jaspervdj/digestive-functors/blob/master/digestive-functors/README.lhs>

Homepage:            http://github.com/jaspervdj/digestive-functors
License:             BSD3
License-file:        LICENSE
Author:              Jasper Van der Jeugt
Maintainer:          jaspervdj@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6


Library
  Hs-source-dirs:      src
  Exposed-modules:     Text.Digestive.Validate,
                       Text.Digestive.Common,
                       Text.Digestive.Types,
                       Text.Digestive.Transform,
                       Text.Digestive.Forms,
                       Text.Digestive.Forms.Html,
                       Text.Digestive.Result,
                       Text.Digestive.Cli,
                       Text.Digestive
  Build-depends:       base >= 4 && < 5,
                       mtl >= 2.0.0.0 && < 3,
                       containers >= 0.3,
                       bytestring >= 0.9,
                       text >= 0.10
