Name:     digestive-functors
Version:  0.4.1.2
Synopsis: A practical formlet library

Description:
    Digestive functors is a library inspired by formlets:

    .

    <http://groups.inf.ed.ac.uk/links/formlets/>

    .

    It is intended to be an improvement of the Haskell formlets library, with as
    main advantages:

    .

    * better error handling, so a web page can display input errors right next
      to the corresponding fields;

    .

    * the ability to easily add @\<label\>@ elements;

    .

    * separation of the validation model and the HTML output.

    .

    Tutorial:
    <http://github.com/jaspervdj/digestive-functors/blob/master/examples/tutorial.lhs>

Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.8

Library
  Hs-source-dirs: src
  Ghc-options:    -Wall -fwarn-tabs

  Exposed-modules:     
    Text.Digestive
    Text.Digestive.Form
    Text.Digestive.Form.Encoding
    Text.Digestive.Ref
    Text.Digestive.Types
    Text.Digestive.Util
    Text.Digestive.View

  Other-modules:
    Text.Digestive.Field
    Text.Digestive.Form.Internal

  Build-depends:
    base       >= 4       && < 5,
    bytestring >= 0.9     && < 0.10,
    containers >= 0.3     && < 0.6,
    mtl        >= 1.1.0.0 && < 3,
    text       >= 0.10    && < 0.12

Test-suite digestive-functors-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall

  Build-depends:
    HUnit                >= 1.2 && < 1.3,
    test-framework       >= 0.4 && < 0.7,
    test-framework-hunit >= 0.2 && < 0.3,
    -- Copied from regular dependencies:
    base       >= 4       && < 5,
    bytestring >= 0.9     && < 0.10,
    containers >= 0.3     && < 0.6,
    mtl        >= 1.1.0.0 && < 3,
    text       >= 0.10    && < 0.12

Source-repository head
  Type:     git
  Location: https://github.com/jaspervdj/digestive-functors
