Name:     digestive-functors
Version:  0.8.4.0
Synopsis: A practical formlet library

Description:
    Digestive functors is a library inspired by formlets:

    .

    <http://groups.inf.ed.ac.uk/links/formlets/>

    .

    It is intended to be an improvement of the Haskell formlets library, with as
    main advantages:

    .

    * better error handling, so a web page can display input errors right next
      to the corresponding fields;

    .

    * the ability to easily add @\<label\>@ elements;

    .

    * separation of the validation model and the HTML output.

    .

    Tutorial:
    <http://github.com/jaspervdj/digestive-functors/blob/master/examples/tutorial.lhs>

Homepage:      http://github.com/jaspervdj/digestive-functors
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Web
Build-type:    Simple
Cabal-version: >= 1.8

Extra-source-files:
  CHANGELOG

Library
  Hs-source-dirs: src
  Ghc-options:    -Wall -fwarn-tabs

  Exposed-modules:
    Text.Digestive
    Text.Digestive.Form
    Text.Digestive.Form.Encoding
    Text.Digestive.Form.List
    Text.Digestive.Ref
    Text.Digestive.Types
    Text.Digestive.Util
    Text.Digestive.View
    Text.Digestive.Form.Internal
    Text.Digestive.Form.Internal.Field

  Build-depends:
    base                  >= 4       && < 5,
    bytestring            >= 0.9     && < 0.11,
    containers            >= 0.3     && < 0.7,
    mtl                   >= 1.1.0.0 && < 3,
    old-locale            >= 1.0     && < 1.1,
    semigroups            >= 0.16    && < 0.19,
    text                  >= 0.10    && < 1.3,
    time                  >= 1.4     && < 1.10
  Extensions: CPP

Test-suite digestive-functors-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall

  Other-modules:
    Text.Digestive.Field.QTests
    Text.Digestive.Field.Tests
    Text.Digestive.Form
    Text.Digestive.Form.Encoding
    Text.Digestive.Form.Encoding.QTests
    Text.Digestive.Form.Encoding.Tests
    Text.Digestive.Form.Internal
    Text.Digestive.Form.Internal.Field
    Text.Digestive.Form.List
    Text.Digestive.Form.List.QTests
    Text.Digestive.Form.QTests
    Text.Digestive.Ref
    Text.Digestive.Tests.Fixtures
    Text.Digestive.Types
    Text.Digestive.Types.QTests
    Text.Digestive.Util
    Text.Digestive.View
    Text.Digestive.View.Tests

  Build-depends:
    HUnit                      >= 1.2 && < 1.7,
    QuickCheck                 >= 2.5 && < 2.12,
    test-framework             >= 0.4 && < 0.9,
    test-framework-hunit       >= 0.3 && < 0.4,
    test-framework-quickcheck2 >= 0.3 && < 0.4,
    -- Copied from regular dependencies:
    base                  >= 4       && < 5,
    bytestring            >= 0.9     && < 0.11,
    containers            >= 0.3     && < 0.7,
    mtl                   >= 1.1.0.0 && < 3,
    old-locale            >= 1.0     && < 1.1,
    semigroups            >= 0.16    && < 0.19,
    text                  >= 0.10    && < 1.3,
    time                  >= 1.4     && < 1.10

Source-repository head
  Type:     git
  Location: https://github.com/jaspervdj/digestive-functors
